--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,5 +8,8 @@
             "src": "/(.*)",
             "dest": "/"
         }
-    ]
+    ],
+    "scripts": {
+        "build": "npm run build"
+    }
 }
