Moving the files

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
     "version":2,
     "builds": [
       {
-        "src": "frontend/package.json",
+        "src": "package.json",
         "use": "@vercel/node"
       }
     ],
@@ -12,5 +12,4 @@
         "dest": "/index.html"
       }
     ]
-}
-  
+} 
