--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "main": "index.js",
     "start": "react-scripts start",
     "dev": "vite",
     "build": "vite build",
@@ -27,7 +28,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.12"
+    "vite": "^5.2.0"
   },
   "browserslist": {
     "production": [
