--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,15 +1,21 @@
 {
-    "version":2,
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/node"
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
       }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
-      }
-    ]
-} 
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+
+    { "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
+  ]
+}
+
+
