--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,15 +1,5 @@
 {
-    "version":2,
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
-      }
-    ]
-} 
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
+}
