--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,5 +8,11 @@
             "src": "/(.*)",
             "dest": "/"
         }
+    ], 
+    "crons" : [
+        {
+            "path": "/whatnewcron",
+            "schedule": "0 10 9 * *"
+        }
     ]
 }
