--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.5"
+    "node-cron": "^3.0.3",
+    "pg": "^8.11.5",
+    "puppeteer": "^22.12.1"
   }
 }
