--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^3.0.3",
     "pg": "^8.11.5",
-    "puppeteer": "^22.12.1"
+    "puppeteer": "^22.12.1",
+    "puppeteer-core": "^22.12.1"
   }
 }
