--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5",
     "puppeteer": "^22.12.1",
-    "puppeteer-core": "^22.12.1"
+    "puppeteer-core": "10.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
